// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers formReducer should correctly resetForm 1`] = `
Object {
  "amount": "0",
  "formType": "pay",
  "message": "",
  "modalOpen": false,
  "onchainAmount": "0",
  "payment_request": "",
  "pubkey": "",
}
`;

exports[`reducers formReducer should correctly setAmount 1`] = `
Object {
  "amount": 1,
  "formType": "pay",
  "message": "",
  "modalOpen": false,
  "onchainAmount": "0",
  "payment_request": "",
  "pubkey": "",
}
`;

exports[`reducers formReducer should correctly setForm 1`] = `
Object {
  "amount": "0",
  "formType": "foo",
  "message": "",
  "modalOpen": true,
  "onchainAmount": "0",
  "payment_request": "",
  "pubkey": "",
}
`;

exports[`reducers formReducer should correctly setMessage 1`] = `
Object {
  "amount": "0",
  "formType": "pay",
  "message": "foo",
  "modalOpen": false,
  "onchainAmount": "0",
  "payment_request": "",
  "pubkey": "",
}
`;

exports[`reducers formReducer should correctly setPaymentRequest 1`] = `
Object {
  "amount": "0",
  "formType": "pay",
  "message": "",
  "modalOpen": false,
  "onchainAmount": "0",
  "payment_request": "foo",
  "pubkey": "",
}
`;

exports[`reducers formReducer should correctly setPubkey 1`] = `
Object {
  "amount": "0",
  "formType": "pay",
  "message": "",
  "modalOpen": false,
  "onchainAmount": "0",
  "payment_request": "",
  "pubkey": "foo",
}
`;

exports[`reducers formReducer should handle initial state 1`] = `
Object {
  "amount": "0",
  "formType": "pay",
  "message": "",
  "modalOpen": false,
  "onchainAmount": "0",
  "payment_request": "",
  "pubkey": "",
}
`;
